2004-11-26  John BouAntoun <jba-mono@optusnet.com.au>

	* MonthCalendar.cs: 
	  - Re-worked all bolded dates handling to match win32
	* ThemeWin32Classic.cs:
	  - Fixed rendering with bolded dates

2004-11-25  Jordi Mas i Hernandez <jordi@ximian.com>

	* ListBox.cs, Theme.cs, ThemeWin32Classic.cs:	
	- Horizontal scroolbar	
	- Multicolumn
	- Fixes


2004-11-25  John BouAntoun <jba-mono@optusnet.com.au>

	* MonthCalendar.cs: 
	  - Fix Usage of MaxSelectionCount from SelectionRange
	  - Fixed Shift + Cursor Selection
	  - Fixed Shift + (Pg up/Pg dn, Home/End) selection
	  - Fixed normal cursor selection to be compat with win32
	  - Fixed Shift + Mouse Click selection

2004-11-24  Peter Bartok <pbartok@novell.com>

	* XplatUI.cs (DispatchMessage): Switched to return IntPtr
	* XplatUIDriver.cs (DispatchMessage): Switched to return IntPtr
	* XplatUIX11.cs: 
	  - CreatedKeyBoardMsg now updates keystate with Alt key
	  - Added workaround for timer crash to CheckTimers, Jackson will
	    develop a proper fix and check in later
	  - Implemented DispatchMessage
	  - Removed calling the native window proc from GetMessage (call
	    now moved to DispatchMessage)

	* KeyEventArgs.cs (Constructor): Now combines modifierkeys into
	  the keydata (Fixes bug #69831)

	* XplatUIWin32.cs:
	  - (DispatchMessage): Switched to return IntPtr
	  - Added DllImport for SetFocus

2004-11-24  Ravindra <rkumar@novell.com>

	* ThemeWin32Classic.cs: Fixed ListView border and checkbox
	background drawing.
	* ListViewItem.cs: Fixed various properties, calculations
	and Clone() method. Fixed ListViewSubItemCollection.Clear() method.
	* ListView.cs: Fixed calculations, BackColor, ForeColor properties
	and some internal properties. Fixed MouseDown handler and Paint
	method.

2004-11-24  John BouAntoun <jba-mono@optusnet.com.au>

	* MonthCalendar.cs: Add TitleMonth ContextMenu handling

2004-11-24  John BouAntoun <jba-mono@optusnet.com.au>
